version/0.2/_sources/models.rst.txt
SCADE models
============

'Flagship' example models
-------------------------

Below is a list of cards pointing to large Ansys SCADE examples stored in their own, dedicated repositories. They are typically large in scope, composed of multiple, interconnected models, and have their own CI/CD actions.

.. grid:: 2 2 3 3

    .. grid-item-card:: Smart boiler control
      :img-top: _static/thumbnails/smart-boiler-control.png
      :link: https://smart-boiler-control.examples.scade.docs.pyansys.com
      :text-align: center

    .. grid-item-card:: Multi-touch cockpit
      :img-top: _static/thumbnails/multi-touch-cockpit.png
      :link: https://multi-touch-cockpit.examples.scade.docs.pyansys.com/
      :text-align: center

Example models
--------------

Below is a list of Ansys SCADE models stored in this repository. They are typically smaller in scope and associated to some external content (article, course, etc.).

.. grid:: 2 2 3 3

    .. grid-item-card:: Runtime Error Proof with SCADE Suite Design Verifier 
        :margin: 0 4 0 0
        :img-top: _static/thumbnails/2025-07-16-dv-rte.jpg

        :fas:`fa-solid fa-file-zipper` :model_zip:`Download model <2025-07-16-dv-rte>`

        :fas:`fa-solid fa-code` :model_sources:`View sources <2025-07-16-dv-rte>`

        :fas:`fa-solid fa-newspaper` `Companion article <https://innovationspace.ansys.com/knowledge/forums/topic/proving-the-absence-of-runtime-errors-in-high-integrity-software-design-using-scade-suite-design-verifier/>`__

    .. grid-item-card:: Rendering a Live Video Stream in SCADE Display Using OpenCV
        :margin: 0 4 0 0
        :img-top: _static/thumbnails/2025-05-06-live-video.jpg

        :fas:`fa-solid fa-file-zipper` :model_zip:`Download model <2025-05-06-live-video>`

        :fas:`fa-solid fa-code` :model_sources:`View sources <2025-05-06-live-video>`

        :fas:`fa-solid fa-newspaper` `Companion article <https://innovationspace.ansys.com/knowledge/forums/topic/rendering-a-live-video-stream-in-scade-display-using-opencv/>`__

    .. grid-item-card:: Jupyter notebook programming with the SCADE Python Wrapper
        :margin: 0 4 0 0
        :img-top: _static/thumbnails/2025-02-26-python-wrapper.jpg

        :fas:`fa-solid fa-file-zipper` :model_zip:`Download model <2025-02-26-python-wrapper>`

        :fas:`fa-solid fa-code` :model_sources:`View sources <2025-02-26-python-wrapper>`

        :fas:`fa-solid fa-newspaper` `Companion article <https://innovationspace.ansys.com/knowledge/forums/topic/jupyter-notebook-programming-with-the-scade-python-wrapper/>`__

    .. grid-item-card:: Data Distribution Service with SCADE Suite
        :margin: 0 4 0 0
        :img-top: _static/thumbnails/2025-01-29-dds-example.jpg

        :fas:`fa-solid fa-file-zipper` :model_zip:`Download model <2025-01-29-dds-example>`

        :fas:`fa-solid fa-code` :model_sources:`View sources <2025-01-29-dds-example>`

        :fas:`fa-solid fa-newspaper` `Companion article <https://innovationspace.ansys.com/knowledge/forums/topic/data-distribution-service-with-scade-suite/>`__
